crates/planarc/src/lowering/snapshots/planarc__lowering__extern_funcs__tests__extern_operator_overload.snap
---
source: crates/planarc/src/lowering/extern_funcs.rs
expression: ast
---
ExternDefinition {
    vis: Private,
    attributes: [],
    functions: [
        ExternFunction {
            name: "/" @ Span { start: 27, end: 28, line: 1, col: 28, line_end: 0, col_end: 28 },
            args: [
                ExternArgument {
                    name: "left" @ Span { start: 29, end: 33, line: 1, col: 30, line_end: 0, col_end: 33 },
                    ty: TypeAnnotation {
                        name: "builtin.str" @ Span { start: 35, end: 46, line: 1, col: 36, line_end: 0, col_end: 46 },
                        refinement: None,
                        args: [],
                    } @ Span { start: 35, end: 46, line: 1, col: 36, line_end: 0, col_end: 46 },
                } @ Span { start: 29, end: 46, line: 1, col: 30, line_end: 0, col_end: 46 },
                ExternArgument {
                    name: "right" @ Span { start: 48, end: 53, line: 1, col: 49, line_end: 0, col_end: 53 },
                    ty: TypeAnnotation {
                        name: "builtin.str" @ Span { start: 55, end: 66, line: 1, col: 56, line_end: 0, col_end: 66 },
                        refinement: None,
                        args: [],
                    } @ Span { start: 55, end: 66, line: 1, col: 56, line_end: 0, col_end: 66 },
                } @ Span { start: 48, end: 66, line: 1, col: 49, line_end: 0, col_end: 66 },
            ],
            return_type: None,
        } @ Span { start: 18, end: 82, line: 1, col: 19, line_end: 0, col_end: 82 },
    ],
} @ Span { start: 0, end: 83, line: 1, col: 1, line_end: 0, col_end: 83 }
