crates/planarc/src/lowering/snapshots/planarc__lowering__extern_funcs__tests__extern_with_multiple_fns.snap
---
source: crates/planarc/src/lowering/extern_funcs.rs
expression: ast
---
ExternDefinition {
    vis: Private,
    attributes: [],
    functions: [
        ExternFunction {
            name: "validate" @ Span { start: 20, end: 28, line: 1, col: 21, line_end: 0, col_end: 28 },
            args: [
                ExternArgument {
                    name: "input" @ Span { start: 29, end: 34, line: 1, col: 30, line_end: 0, col_end: 34 },
                    ty: TypeAnnotation {
                        name: "String" @ Span { start: 36, end: 42, line: 1, col: 37, line_end: 0, col_end: 42 },
                        refinement: None,
                        args: [],
                    } @ Span { start: 36, end: 42, line: 1, col: 37, line_end: 0, col_end: 42 },
                } @ Span { start: 29, end: 42, line: 1, col: 30, line_end: 0, col_end: 42 },
                ExternArgument {
                    name: "mode" @ Span { start: 44, end: 48, line: 1, col: 45, line_end: 0, col_end: 48 },
                    ty: TypeAnnotation {
                        name: "Int" @ Span { start: 50, end: 53, line: 1, col: 51, line_end: 0, col_end: 53 },
                        refinement: None,
                        args: [],
                    } @ Span { start: 50, end: 53, line: 1, col: 51, line_end: 0, col_end: 53 },
                } @ Span { start: 44, end: 53, line: 1, col: 45, line_end: 0, col_end: 53 },
            ],
            return_type: None,
        } @ Span { start: 20, end: 65, line: 1, col: 21, line_end: 1, col_end: 0 },
    ],
} @ Span { start: 0, end: 83, line: 1, col: 1, line_end: 1, col_end: 18 }
