crates/planarc/src/lowering/snapshots/planarc__lowering__extern_funcs__tests__simple_extern_module.snap
---
source: crates/planarc/src/lowering/extern_funcs.rs
expression: ast
---
ExternDefinition {
    vis: Private,
    attributes: [],
    functions: [
        ExternFunction {
            name: "isPascalCase" @ Span { start: 18, end: 30, line: 1, col: 19, line_end: 0, col_end: 30 },
            args: [
                ExternArgument {
                    name: "name" @ Span { start: 31, end: 35, line: 1, col: 32, line_end: 0, col_end: 35 },
                    ty: TypeAnnotation {
                        name: "String" @ Span { start: 37, end: 43, line: 1, col: 38, line_end: 0, col_end: 43 },
                        refinement: None,
                        args: [],
                    } @ Span { start: 37, end: 43, line: 1, col: 38, line_end: 0, col_end: 43 },
                } @ Span { start: 31, end: 43, line: 1, col: 32, line_end: 0, col_end: 43 },
            ],
            return_type: None,
        } @ Span { start: 18, end: 59, line: 1, col: 19, line_end: 0, col_end: 59 },
    ],
} @ Span { start: 0, end: 60, line: 1, col: 1, line_end: 0, col_end: 60 }
